# real-time-lightning-visualization

./: CMakeLists.txt  CMakePresets.json  README.md  a.out  main.c
assets/: test_data.csv
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/include/: Makefile  cmake_install.cmake
build-debug/src/: Makefile  prog
build-make/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  prog
build-make/include/: Makefile
build-make/shaders/: map_frag.glsl
build-make/src/: Makefile  prog
build-make/src/shaders/: cube_vert.glsl  lighting_frag.glsl  map_frag.glsl  map_vert.glsl  simple_triangle_vert.glsl
build-umf/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-umf/include/: Makefile
build-umf/src/: Makefile  prog
build-umf/src/shaders/: cube_frag.glsl  lighting_vert.glsl  simple_triangle_frag.glsl  simple_triangle_vert.glsl
include/: App.hpp  CMakeLists.txt  Camera.hpp  Data.hpp  Input.hpp  MapRenderer.hpp  ResourceManager.hpp  ShaderProgram.hpp  Texture.hpp  VAO.hpp  VBO.hpp  Window.hpp
include/glad/: glad.h
shaders/: lightning_frag.glsl  lightning_vert.glsl  map_frag.glsl  map_vert.glsl
src/: App.cpp  Camera.cpp  CmakeLists.txt  Data.cpp  Input.cpp  MapRenderer.cpp  ResourceManager.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp
vendors/: CMakeLists.txt
vendors/imgui-sfml/: CMakeLists.txt
vendors/sfml/: CMakeLists.txt
